Endpoints are all set at this point
