# FlightInformationAPI/Controllers/FlightInformationController.cs
@@ -11,12 +11,12 @@ using Microsoft.EntityFrameworkCore;
 namespace FlightInformationAPI.Controllers
 {
     [ApiController]
-    public class FlightInformationController(IMediator mediator, IValidator<Flight> validator) : FlightInformationControllerControllerBase
+    public class FlightInformationController(IMediator mediator, IValidator<FlightDetail> validator) : FlightInformationControllerControllerBase
     {
         private readonly IMediator _mediator = mediator;
-        private readonly IValidator<Flight> _validator = validator;
+        private readonly IValidator<FlightDetail> _validator = validator;
 
-        public override async Task<IActionResult> CreateFlight([FromBody] Flight body, CancellationToken cancellationToken = default)
+        public override async Task<IActionResult> CreateFlight([FromBody] FlightDetail body, CancellationToken cancellationToken = default)
         {
             ValidationResult result = _validator.Validate(body);
 
@@ -38,24 +38,28 @@ namespace FlightInformationAPI.Controllers
             }
 
             var createFlightCommandRequest = new CreateFlightCommandRequest(body);
-
             var response = await _mediator.Send(createFlightCommandRequest, cancellationToken);
 
-            if (response < 1)
+            if (response.CreatedFlightId is null)
             {
                 return StatusCode(StatusCodes.Status500InternalServerError);
             }
 
-            return Ok("Flight created successfully.");
+            // 201 + Location header
+            return CreatedAtAction(
+                nameof(GetFlight),                
+                new { id = response.CreatedFlightId },
+                "Flight created successfully."
+            );
         }
 
-        public override async Task<ActionResult<Flight>> DeleteFlight([BindRequired] int id, CancellationToken cancellationToken = default)
+        public override async Task<ActionResult<FlightDetail>> DeleteFlight([BindRequired] int id, CancellationToken cancellationToken = default)
         {
             var deleteFlightCommandRequest = new DeleteFlightCommandRequest(id);
 
             var response = await _mediator.Send(deleteFlightCommandRequest, cancellationToken);
 
-            if (response.Flight == null)
+            if (response.FlightDetail == null)
             {
                 return NotFound(new ErrorResponse
                 {
@@ -64,16 +68,16 @@ namespace FlightInformationAPI.Controllers
                 });
             }
 
-            return Ok(response.Flight);
+            return Ok(response.FlightDetail);
         }
 
-        public override async Task<ActionResult<Flight>> GetFlight([BindRequired] int id, CancellationToken cancellationToken = default)
+        public override async Task<ActionResult<FlightDetail>> GetFlight([BindRequired] int id, CancellationToken cancellationToken = default)
         {
             var getFlightQueryRequest = new GetFlightQueryRequest(id);
 
             var response = await _mediator.Send(getFlightQueryRequest, cancellationToken);
 
-            if (response.Flight is null)
+            if (response.FlightDetail is null)
             {
                 return NotFound(new ErrorResponse
                 {
@@ -82,11 +86,11 @@ namespace FlightInformationAPI.Controllers
                 });
             }
 
-            return Ok(response.Flight);
+            return Ok(response.FlightDetail);
         }
 
         // No pagination return all the flights just for simplicity 
-        public override async Task<ActionResult<ICollection<Flight>>> GetFlights(CancellationToken cancellationToken = default)
+        public override async Task<ActionResult<ICollection<FlightDetail>>> GetAllFlights(CancellationToken cancellationToken = default)
         {
             var getAllFlightsQueryRequest = new GetAllFlightsQueryRequest();
 
@@ -95,8 +99,8 @@ namespace FlightInformationAPI.Controllers
             return Ok(response.AllFlights);
         }
 
-        public override async Task<ActionResult<ICollection<Flight>>> SearchFlights(
-            [BindRequired, FromQuery] SearchKeys searchKeys, 
+        public override async Task<ActionResult<ICollection<FlightDetail>>> SearchFlights(
+            [BindRequired, FromQuery] SearchKeys searchKeys,
             CancellationToken cancellationToken = default)
         {
             var searchFlightsQueryRequest = new SearchFlightsQueryRequest(searchKeys);
@@ -106,9 +110,9 @@ namespace FlightInformationAPI.Controllers
             return Ok(response.Flights);
         }
 
-        public override async Task<ActionResult<Flight>> UpdateFlight(
-            [BindRequired] int id, 
-            [FromBody] Flight body, 
+        public override async Task<ActionResult<FlightDetail>> UpdateFlight(
+            [BindRequired] int id,
+            [FromBody] FlightDetail body,
             CancellationToken cancellationToken = default)
         {
             ValidationResult result = _validator.Validate(body);
@@ -134,9 +138,9 @@ namespace FlightInformationAPI.Controllers
 
             try
             {
-                var flight = await _mediator.Send(commandRequest, cancellationToken);
+                var response = await _mediator.Send(commandRequest, cancellationToken);
 
-                if (flight.Flight is null)
+                if (response.FlightDetail is null)
                 {
                     return NotFound(new ErrorResponse
                     {
@@ -145,7 +149,7 @@ namespace FlightInformationAPI.Controllers
                     });
                 }
 
-                return Ok(flight.Flight);
+                return Ok(response.FlightDetail);
             }
             catch (DbUpdateConcurrencyException)
             {
